# enterprise-ai-analyst

./: .gitignore  BUILD-PROMPT.md  README.md  SPEC.md
data-answers-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
data-answers-agent/api/: index.py
data-answers-agent/app/: config.py  envelope.py  main.py  models.py
data-answers-agent/app/audit/: __init__.py  audit.py
data-answers-agent/app/cache/: __init__.py  redis_client.py
data-answers-agent/app/eval/: __init__.py  __main__.py  harness.py  models.py
data-answers-agent/app/grounding/: __init__.py  grounding_service.py  registry.yaml  retrieval.py
data-answers-agent/app/identity/: __init__.py  broker.py  stub_broker.py  wif_broker.py
data-answers-agent/app/loop/: model_router.py  nim_client.py  orchestrator.py
data-answers-agent/app/mcp/: warehouse_server.py
data-answers-agent/docs/: bigquery-rls-setup.sql  gcp-connectivity-checklist.md
data-answers-agent/eval/: golden_set.yaml
data-answers-agent/mock_data/: README.md  customers.json  orders.json  sales.json
data-answers-agent/scripts/: bigquery-bootstrap.sql  generate_bq_seed.py  seed_neon_db.py  setup-bigquery.ps1
data-answers-agent/tests/: conftest.py  test_clarification.py  test_decline.py  test_embedding_retrieval.py  test_eval_harness.py  test_happy_path.py  test_identity_broker.py  test_mcp_postgres_integration.py  test_mcp_transport.py  test_metrics.py  test_mock_warehouse.py  test_postgres_warehouse.py  test_readonly_guard.py  test_redis_audit.py
(+50 files in other folders)
