[project]
name = "data-answers-agent"
version = "0.3.0"
description = "IF-RES-2026-061 Data-Answers Agent walking skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "structlog>=24.0",
  "google-cloud-bigquery>=3.0",
  "anthropic>=0.40",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]
embeddings = [
  "sentence-transformers>=3.0",
  "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
